# production-demo

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
conf/: ingestworker.yaml  searchapi.yaml
docker/: Dockerfile.ingestapi  Dockerfile.ingestworker  Dockerfile.ingestworker.cpu  Dockerfile.searchapi  Dockerfile.searchapi.cpu
docker/redis/: redis.conf
docker/traefik/: dynamic.yml  traefik.yml
indexapi/: main.py  pyproject.toml
ingestapi/: container.py  main.py  pyproject.toml
ingestapi/api/: router.py
ingestapi/api/routes/: ingest.py
ingestapi/api/v1/routes/: ingest.py
ingestapi/config/: config.py
ingestapi/service/: __init__.py  ingest.py
ingestworker/: container.py  main.py  pyproject.toml
ingestworker/config/: config.py
ingestworker/service/: ingest.py
ingestworker/task/: __init__.py  ingest.py
searchapi/: container.py  main.py  pyproject.toml
searchapi/api/: router.py
searchapi/api/v1/routes/: image.py
searchapi/config/: config.py
searchapi/repo/: image.py
searchapi/service/: __init__.py  image.py
shared/: pyproject.toml
shared/config/: __init__.py  config.py  indexapi.py  logger.py  milvus.py  redis.py  storage.py
shared/hash/: phash.py
shared/http_client/: __init__.py  index.py
shared/logger/: logger.py
shared/model/: index.py  ingest.py
shared/shared/model/: index.py
shared/storage/: __init__.py  s3.py
