[project]
name = "production-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ingestapi",
    "ingestworker",
    "indexapi",
    "shared",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "shared",
    "indexapi",
    "ingestworker",
    "ingestapi",
]

[tool.uv.sources]
shared = { workspace = true }
ingestworker = { workspace = true }
ingestapi = { workspace = true }
indexapi = { workspace = true }