[project]
name = "ingestapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "celery[redis]>=5.5.3",
    "dependency-injector>=4.48.2",
    "fastapi>=0.121.2",
    "pydantic>=2.12.4",
    "python-magic>=0.4.27",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
    "shared",
    "uuid7>=0.1.0",
]

[tool.uv]
package = false

[tool.uv.sources]
shared = { workspace = true }
