[project]
name = "ingestworker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "shared",
    "pillow-heif>=1.1.1",
    "imagehash>=4.3.2",
    "dependency-injector>=4.48.2",
    "celery[redis]>=5.5.3",
    "uuid7>=0.1.0",
    "pymilvus (>=2.6.0,<3.0.0)",
    "python-magic>=0.4.27",
    "open-clip-torch>=3.2.0",
    "timm>=1.0.22",
    "transformers>=4.57.3",
]

[project.optional-dependencies]
gpu = ["shared[torch-gpu]"]
cpu = ["shared[torch-cpu]"]

[tool.uv]
package = false

[tool.uv.sources]
shared = { workspace = true }
